<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical" >



<EditText android:id="@+id/Date"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:hint="@string/Date" />


<EditText android:id="@+id/Station"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:hint="@string/Station" />


<EditText android:id="@+id/Odometer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:hint="@string/Odometer" />

<EditText android:id="@+id/FuelAmount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:hint="@string/FuelAmount" />


<EditText android:id="@+id/FuelGrade"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:hint="@string/FuelGrade" />

<EditText android:id="@+id/FuelUnitCost"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:hint="@string/FuelUnitCost" />

<TextView
    android:id="@+id/oldEntriesTitle"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="Fuel Log" />

<ListView
    android:id="@+id/oldEntriesList"
    android:layout_width="fill_parent"
    android:layout_height="118dp"
    android:scrollbars="vertical" >

</ListView>

<TextView
    android:layout_width="222dp"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="0"
    android:id="@+id/textView"
    android:layout_gravity="center_horizontal"
    android:layout_weight="1" />

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:id="@+id/save"
        android:onClick="save"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="edit"
        android:id="@+id/edit"
        android:onClick="edit"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:id="@+id/cancel"
        android:onClick="cancel"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>


</LinearLayout>

